<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/display_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:minHeight="@dimen/default_list_item_height" >

        <TextView
            android:id="@+id/welcome"
            style="@style/label_style"
            android:text="@string/welcome_message" />
    </LinearLayout>

    <include layout="@layout/fragment_item_list_separator" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:minHeight="@dimen/default_list_item_height"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_enter_names"
            style="@style/button_style"
            android:text="@string/enter_names_label" />

        <Button
            android:id="@+id/button_view"
            style="@style/button_style"
            android:text="@string/view_label" />

        <Button
            android:id="@+id/button_store"
            style="@style/button_style"
            android:text="@string/store_label" />

        <Button
            android:id="@+id/button_load"
            style="@style/button_style"
            android:text="@string/load_label" />

        <Button
            android:id="@+id/button_exit"
            style="@style/button_style"
            android:text="@string/exit_label" />
    </LinearLayout>

</LinearLayout>