<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/display_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/label_name"
            style="@style/label_style"
            android:text="@string/name_label" />

        <include layout="@layout/fragment_item_list_separator" />

        <EditText
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_label_hint"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <include layout="@layout/fragment_item_list_separator" />

        <TextView
            android:id="@+id/label_age"
            style="@style/label_style"
            android:text="@string/age_label" />

        <include layout="@layout/fragment_item_list_separator" />

        <EditText
            android:id="@+id/text_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/age_label_hint"
            android:inputType="number" >

        </EditText>

        <include layout="@layout/fragment_item_list_separator" />

        <TextView
            android:id="@+id/label_foods"
            style="@style/label_style"
            android:text="@string/foods_label" />

        <include layout="@layout/fragment_item_list_separator" />

        <Spinner
            android:id="@+id/choice_food_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_food_types" />
    </LinearLayout>

    <include layout="@layout/fragment_item_list_separator" />

    <RelativeLayout
        android:id="@+id/button_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="20dp"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/button_add"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/add_label" />

        <Button
            android:id="@+id/button_done"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/done_label" />
    </RelativeLayout>

</LinearLayout>