<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/display_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/label_header"
            style="@style/header_style"
            android:text="@string/store_entry_list_label" />

        <TextView
            android:id="@+id/label_filename"
            style="@style/label_style"
            android:text="@string/file_name_label" />

        <include layout="@layout/fragment_item_list_separator" />

        <EditText
            android:id="@+id/text_file_name"
            style="@style/edit_text_style"
            android:hint="@string/file_name_label_hint"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <include layout="@layout/fragment_item_list_separator" />

    <RelativeLayout
        android:id="@+id/button_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="20dp"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/button_store"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/store_label" />

        <Button
            android:id="@+id/button_done"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/done_label" />
    </RelativeLayout>

</LinearLayout>